data/derived/comb/progs/unify/prog1347.ml.out
Characters 449-470:
  (eval(e1,x,y) ** 2.0) + (eval(e2,x,y) ** 2.0) + (eval(e3,x,y) ** 2.0);;
  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
